[gd_scene load_steps=5 format=3 uid="uid://djl1ns8k83hf4"]

[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_0aohr"]
[ext_resource type="Texture2D" uid="uid://c57fej47adq38" path="res://assets/restart.png" id="2_ae2cj"]
[ext_resource type="FontFile" uid="uid://b3tn6lisestmo" path="res://assets/font/flappy-font.ttf" id="2_fmj3u"]
[ext_resource type="AudioStream" uid="uid://5xeq0dhp3ylo" path="res://assets/sounds/sfx_die.wav" id="4_7vqfo"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -200.0
offset_bottom = -354.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 175)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_0aohr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 200.0
offset_bottom = 350.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 200.0
offset_bottom = 350.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.941176, 0.901961, 0.54902, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -80.0
offset_right = 65.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.643137, 0, 1)
theme_override_fonts/font = ExtResource("2_fmj3u")
theme_override_font_sizes/font_size = 23
text = "Score"
horizontal_alignment = 1
uppercase = true

[node name="ScoreValue" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_fmj3u")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Best" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.643137, 0, 1)
theme_override_fonts/font = ExtResource("2_fmj3u")
theme_override_font_sizes/font_size = 23
text = "Best"
horizontal_alignment = 1
uppercase = true

[node name="BestValue" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_fmj3u")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1

[node name="RestartButton" type="TextureButton" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_ae2cj")

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7vqfo")

[connection signal="pressed" from="MarginContainer/ColorRect/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
